<resources>
    <string name="app_name">DrinkWater</string>
    <string name="name">Name</string>
    <string name="height">Height</string>
    <string name="weight">Weight</string>
    <string name="image_logo">Image Logo</string>
    <string name="save">Save</string>
    <string name="example_string">0%</string>
    <string name="drink_water">Drink Water (100 ml)</string>
    <string name="water_amount">Water amount per day (L)</string>
    <string name="about">About</string>
    <string name="settings">Settings</string>
    <string name="notification">Notification</string>
    <string name="home">Home</string>
    <string name="open_nav_drawer">Open navigation drawer</string>
    <string name="close_nav_drawer">Close navigation drawer</string>
    <string name="water_drank">Water drank</string>
    <string name="about_text">
        This application is designated for those who want to live a more healthy life
        and be more hydrated. If you are one of those people, then this application is made for you.
        Here you\'ll find a way to set the amount of water that you want to drink during 24h.
        The app will send you notifications during the day so you\'ll remember to drink it.
        When you drank all of the water that you want in a day, our counter is going to restart
        the counting. If you do not want notifications, then you can go on the \"Notifications\"
        item in the nav and stop it. Please, feel welcome to use this app in you daily life!
    </string>
    <string name="history">History</string>
    <string name="total_water">Total Water(L)</string>
    <string name="total_water_ml">Total Water(ml)</string>
    <string name="percent">Percent(%)</string>
    <string name="quantity">Quantity(ml)</string>
    <string name="date">Date</string>
    <string name="clear_history">Clear History</string>
    <string name="initial_hour">Initial Hour</string>
    <string name="_8">8</string>
    <string name="final_hour">Final Hour</string>
    <string name="_24">24</string>
    <string name="update_interval">Update Interval</string>
    <string name="notificationText">
        Hello! Feel free to set up the interval you want for us to remind you to drink water.
        Remember to just put the number of the hour, like 8 for 8 AM and 24 for midnight.
        Enjoy!
    </string>
    <string name="check_your_history_of_water_drank_per_day">Check your history of water \ndrank per day!</string>
</resources>